# gvas2json

./: .gitattributes  Cargo.toml  LICENSE  README.md  regenerate-samples.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
resources/test/: sample1.json  sample1.toml  sample1.yaml  sample2.sav  sample2.yaml
tests/: cli.rs
