[package]
name = "gvas2json"
version = "0.1.4"
edition = "2021"
description = "Convert between JSON and GVAS"
license = "MIT"
repository = "https://github.com/scottanderson/gvas2json"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
colored_json = "4.1"
gvas = { version = "0", features = ["serde"] }
minus = { version = "5.3", features = ["static_output", "search"] }
serde = "1.0"
serde-transcode = "1.1"
serde_json = { version = "1.0", features = ["float_roundtrip"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
